--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,13 @@ cffi==1.15.1
 charset-normalizer==2.1.1
 cryptography==37.0.4
 defusedxml==0.7.1
+dj-database-url==1.0.0
 dj-rest-auth==2.2.5
 Django==4.1.1
 django-allauth==0.50.0
 django-cors-headers==3.10.1
 django-filter==22.1
+django-heroku==0.3.1
 django-rest-auth==0.9.5
 django-rest-framework==0.1.0
 djangorestframework==3.13.1
