--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,6 @@ applications/course/__pycache__/models.cpython-38.pyc
 applications/course/__pycache__/serializers.cpython-38.pyc
 applications/course/__pycache__/urls.cpython-38.pyc
 applications/course/__pycache__/views.cpython-38.pyc
+commons/authentication/migrations/__pycache__/0001_initial.cpython-38.pyc
+commons/authentication/migrations/__pycache__/__init__.cpython-38.pyc
+commons/utils/__pycache__/file_utils.cpython-38.pyc
