--- a/.gitignore
+++ b/.gitignore
@@ -1,40 +1,11 @@
 db.sqlite3
-commons/__pycache__/
 
-commons/authentication/__pycache__/
-commons/authentication/migrations/
-commons/migrations/
-
-eleaning_backend/__pycache__/
-applications/__pycache__/
-applications/assignment/migrations/
-applications/course/__pycache__/
-applications/assignment/__pycache__/
-applications/course/migrations/
-applications/category/migrations/
-applications/category/migrations/
-applications/category/__pycache__/
+.venv/
+.env
+__pycache__/
 target/
 runserver.sh
 run.sh
 media/
 createsuperuser.sh
 
-elearning_backend/__pycache__/__init__.cpython-38.pyc
-elearning_backend/__pycache__/settings.cpython-38.pyc
-elearning_backend/__pycache__/urls.cpython-38.pyc
-elearning_backend/__pycache__/wsgi.cpython-38.pyc
-
-commons/authentication/migrations/__pycache__/__init__.cpython-38.pyc
-commons/authentication/migrations/__pycache__/0001_initial.cpython-38.pyc
-
-applications/course/__pycache__/__init__.cpython-38.pyc
-applications/course/__pycache__/admin.cpython-38.pyc
-applications/course/__pycache__/apps.cpython-38.pyc
-applications/course/__pycache__/models.cpython-38.pyc
-applications/course/__pycache__/serializers.cpython-38.pyc
-applications/course/__pycache__/urls.cpython-38.pyc
-applications/course/__pycache__/views.cpython-38.pyc
-commons/authentication/migrations/__pycache__/0001_initial.cpython-38.pyc
-commons/authentication/migrations/__pycache__/__init__.cpython-38.pyc
-commons/utils/__pycache__/file_utils.cpython-38.pyc
