updates on requirment.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 absl-py==1.0.0
 amqp==5.1.1
 appdirs==1.4.3
+apturl==0.5.2
 asgiref==3.5.2
 astunparse==1.6.3
 attrs==22.1.0
@@ -12,7 +13,6 @@ beautifulsoup4==4.8.2
 billiard==3.6.4.0
 bleach==3.1.1
 blinker==1.4
-Brlapi==0.7.0
 bs4==0.0.1
 cachetools==4.2.4
 cajarename==19.7.15
