--- a/requirements.txt
+++ b/requirements.txt
@@ -1,218 +1,93 @@
-absl-py==1.0.0
-amqp==5.1.1
-appdirs==1.4.3
+algoliasearch==2.6.2
+algoliasearch-django==2.0.0
+arabic-reshaper==2.1.4
 asgiref==3.5.2
-astunparse==1.6.3
+asn1crypto==1.5.1
 attrs==22.1.0
 autopep8==1.7.0
-backcall==0.1.0
 backports.zoneinfo==0.2.1
-bcrypt==3.1.7
-beautifulsoup4==4.8.2
-billiard==3.6.4.0
-bleach==3.1.1
-blinker==1.4
-bs4==0.0.1
-cachetools==4.2.4
-celery==5.2.7
 certifi==2022.6.15
 cffi==1.15.1
-chardet==3.0.4
 charset-normalizer==2.1.1
 click==8.1.3
-click-didyoumean==0.3.0
-click-plugins==1.1.1
-click-repl==0.2.0
-colorama==0.4.3
-configobj==5.0.6
 coreapi==2.3.3
 coreschema==0.0.4
 cryptography==37.0.4
-dbus-python==1.2.16
-decorator==4.4.2
-decouple==0.0.7
+cssselect2==0.7.0
 defusedxml==0.7.1
-distlib==0.3.0
-distro==1.4.0
 dj-database-url==1.0.0
+dj-email-url==1.0.6
 dj-rest-auth==2.2.5
-Django==4.1.1
+Django==3.2.16
 django-allauth==0.50.0
-django-angular==2.3
+django-cache-url==3.4.2
 django-cors-headers==3.10.1
+django-environ==0.9.0
 django-filter==22.1
 django-heroku==0.3.1
 django-rest-auth==0.9.5
+django-rest-enumfield==0.2.0
 django-rest-framework==0.1.0
 django-rest-swagger==2.2.0
+django-templated-mail==1.1.1
 djangorestframework==3.14.0
-djangorestframework-simplejwt==5.2.0
-dnspython==1.16.0
-docutils==0.16
+djangorestframework-simplejwt==4.8.0
+djoser==2.1.0
 drf-spectacular==0.24.2
-duplicity==0.8.12.0
-entrypoints==0.3
-fasteners==0.14.1
-filelock==3.0.12
-flatbuffers==2.0
-folder-color-caja==0.0.86
-folder-color-common==0.0.86
+environs==9.5.0
 future==0.18.2
-galternatives==1.0.6
-gast==0.4.0
-google-auth==2.3.3
-google-auth-oauthlib==0.4.6
-google-pasta==0.2.0
-gpg===1.13.1-unknown
-grpcio==1.42.0
 gunicorn==20.1.0
-h5py==3.6.0
-html5lib==1.0.1
-httplib2==0.14.0
+html5lib==1.1
 idna==3.3
-importlib-metadata==4.8.2
 importlib-resources==5.9.0
 inflection==0.5.1
-ipykernel==5.2.0
-ipython==7.13.0
-ipython-genutils==0.2.0
-ipywidgets==6.0.0
 itypes==1.2.0
-jedi==0.15.2
 Jinja2==3.1.2
 jsonschema==4.16.0
-jupyter-client==6.1.2
-jupyter-core==4.6.3
-keras==2.7.0
-Keras-Preprocessing==1.1.2
-keyman-config==15.0.273
-keyring==18.0.1
-kombu==5.2.4
-language-selector==0.1
-launchpadlib==1.10.13
-lazr.restfulclient==0.14.2
-lazr.uri==1.0.3
-libclang==12.0.0
-lockfile==0.12.2
-louis==3.12.0
-lxml==4.5.0
-macaroonbakery==1.3.1
-Magnus==1.0.3
-Mako==1.1.0
-Markdown==3.3.6
-Markups==3.0.0
+lxml==4.9.1
 MarkupSafe==2.1.1
-mate-hud==19.10.0
-mate-menu==20.4.1
-mate-tweak==20.4.0
-mistune==0.8.4
-monotonic==1.5
-more-itertools==4.2.0
-nbconvert==5.6.1
-nbformat==5.0.4
-netifaces==0.10.4
-notebook==6.0.3
-numpy==1.17.4
+marshmallow==3.18.0
 oauthlib==3.2.0
-olefile==0.46
-onboard==1.4.1
 openapi-codec==1.3.2
-opt-einsum==3.3.0
-packaging==20.3
-pandocfilters==1.4.2
-paramiko==2.6.0
-parso==0.5.2
-pbr==5.11.0
-pexpect==4.6.0
-pickleshare==0.7.5
+oscrypto==1.3.0
+packaging==21.3
 Pillow==9.2.0
-pkgutil-resolve-name==1.3.10
-prometheus-client==0.7.1
-prompt-toolkit==2.0.10
-protobuf==3.19.1
-psutil==5.5.1
+pkgutil_resolve_name==1.3.10
 psycopg2==2.9.3
-pulsemixer==1.5.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycairo==1.16.2
 pycodestyle==2.9.1
 pycparser==2.21
-pycrypto==2.6.1
-pycups==1.9.73
-Pygments==2.3.1
-PyGObject==3.36.0
+pyHanko==0.15.1
+pyhanko-certvalidator==0.19.6
 PyJWT==2.4.0
-pymacaroons==0.13.0
-PyNaCl==1.3.0
-pyparsing==2.4.6
-PyQt5==5.14.1
-pyRFC3339==1.1
+pyparsing==3.0.9
+PyPDF3==1.0.6
 pyrsistent==0.18.1
-python-apt==2.0.0+ubuntu0.20.4.8
-python-dateutil==2.7.3
-python-debian===0.1.36ubuntu1
-python-magic==0.4.16
-python-markdown-math==0.6
-python-memcached==1.59
-python-xapp==1.8.1
-python-xlib==0.23
+python-bidi==0.4.2
+python-dotenv==0.21.0
 python3-openid==3.2.0
 pytz==2022.2.1
-pyxattr==0.6.1
-pyxdg==0.26
+pytz-deprecation-shim==0.1.0.post0
 PyYAML==6.0
-pyzmq==18.1.1
-qrcode==6.1
-rabbitmq==0.2.0
-reportlab==3.5.34
+qrcode==7.3.1
+reportlab==3.6.12
 requests==2.28.1
-requests-cache==0.4.13
 requests-oauthlib==1.3.1
-requests-unixsocket==0.2.0
-roman==2.0.0
-rsa==4.7.2
-SecretStorage==2.3.1
-Send2Trash==1.5.0
-sentry-sdk==1.4.2
-setproctitle==1.1.10
 simplejson==3.17.6
-sip==4.19.21
 six==1.16.0
-soupsieve==1.9.5
+social-auth-app-django==4.0.0
+social-auth-core==4.3.0
 sqlparse==0.4.2
-ssh-import-id==5.10
-systemd-python==234
-tensorboard==2.7.0
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.0
-tensorflow==2.7.0
-tensorflow-estimator==2.7.0
-tensorflow-io-gcs-filesystem==0.22.0
-termcolor==1.1.0
-terminado==0.8.2
-testpath==0.4.4
-testresources==2.0.1
+stripe==4.2.0
+svglib==1.4.1
+tinycss2==1.2.1
 toml==0.10.2
-tornado==5.1.1
-traitlets==4.3.3
-typing-extensions==4.0.0
-ubuntu-advantage-tools==27.11.3
-ubuntu-drivers-common==0.0.0
-ufw==0.36
-unattended-upgrades==0.1
+tqdm==4.64.1
+tzdata==2022.6
+tzlocal==4.2
 uritemplate==4.1.1
+uritools==4.0.0
 urllib3==1.26.12
-vboxapi==1.0
-vine==5.0.0
-virtualenv==20.0.17
-wadllib==1.3.3
-wcwidth==0.1.8
 webencodings==0.5.1
-Werkzeug==2.0.2
 whitenoise==5.3.0
-widgetsnbextension==2.0.0
-wrapt==1.13.3
-xkit==0.0.0
-youtube-dl==2020.3.24
+xhtml2pdf==0.2.8
 zipp==3.8.1
